[package]
name = "mpris-server"
version = "0.9.0"
description = "Implement MPRIS D-Bus interface in your application"
homepage = "https://github.com/SeaDve/mpris-server"
repository = "https://github.com/SeaDve/mpris-server"
documentation = "https://docs.rs/mpris-server"
authors = ["Dave Patrick Caberto"]
categories = ["api-bindings", "multimedia", "os::unix-apis"]
keywords = ["mpris", "dbus"]
readme = "README.md"
license = "MPL-2.0"
edition = "2024"

[dependencies]
async-channel = "2.5"
futures-channel = "0.3"
serde = "1.0"
trait-variant = "0.1.2"
zbus = "5.5"

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes", "unstable"] }
static_assertions = "1.1"

[features]
unstable = []
tokio = ["zbus/tokio"]

[package.metadata.docs.rs]
features = ["unstable", "tokio"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
